--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 
-
+:root{
+    --main-color:#08638d;
+}
 body{
     margin:0;
     padding:0;
@@ -35,4 +37,30 @@ header{
 
 .social-icons i{
     margin: 0 8px;
+}
+
+nav{
+    /* background-color: transparent; */
+    height: 50px;
+    margin-bottom: 20px;
+}
+
+nav ul{
+    margin:25px 0 0 0;
+
+}
+
+.navbar-nav li{
+    padding: 10px 20px;
+}
+
+.navbar-nav li a{
+    color:#fff;
+    font-size: 20px;
+    font-weight: 800;
+
+}
+
+.navbar-nav li a:hover{
+    color:var(--main-color);
 }
