--- a/main.css
+++ b/main.css
@@ -68,6 +68,7 @@ nav ul{
 .breaking-news-section{
     padding:0 30px 0 60px;
     display: flex;
+    height: 30px;
 }
 
 #btext{
@@ -80,7 +81,7 @@ nav ul{
 }
 
 .breaking-news{
-    padding: 30px;
+    padding: 0 30px;
     color:#fff;
     font-weight: 800;
     display: inline-block;
@@ -90,6 +91,7 @@ nav ul{
 .social-icons i:hover{
     color:var(--main-color);
     cursor: pointer;
+    text-decoration: none;
 }
 
 .bntime{
@@ -97,4 +99,65 @@ nav ul{
     color:rgba(255,255,255,.5);
     padding:0 10px;
     font-size: 12px;
+}
+
+#popular-news{
+    display: flex;
+    margin:30px 5%;
+}
+#popular-news img{
+    width: 100%;
+    filter:brightness(.7);
+
+}
+
+#popular-news h2{
+    margin:0;
+    padding: 5px;
+    color:#fff;
+}
+
+#featured h2{
+    background-color: #000;
+}
+
+#latest h2{
+    background-color: darkred;
+}
+
+#our-picks h2{
+    background-color: darkblue;
+}
+
+.carousel, .news-container{
+    position: relative;
+}
+
+.popular-news-text{
+     font-size: 14px;
+     position: absolute;
+     color:#fff;
+     z-index: 2;
+     bottom: 5px;
+     font-weight: bolder;
+     padding:0 10px;
+     transition-duration: 500ms;
+
+}
+
+#featured{
+    flex:2;
+}
+
+#latest,
+#our-picks{
+    flex:1;
+}
+
+.news-container:hover{
+    cursor: pointer;
+}
+
+.news-container:hover > .popular-news-text{
+    bottom: 10px;
 }
